--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html lang="de">
-
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Web Engineering</title>
+        <meta name="color-scheme" content="dark light">
+        <link rel="stylesheet" href="./styles/main.css" type="text/css">
+        <script defer type="text/javascript" src="./scripts/main.js"></script>
+        <title>Alan Bernstein - Web Engineering</title>
     </head>
 
     <body>
-        
+        <nav>
+            <button>demo</button>
+        </nav>
+        <main>
+            <h1>hello</h1>
+        </main>
     </body>
-
 </html>
