add dark mode and change mode ability

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
     <body>
         <nav>
-            <button>demo</button>
+            <p class="heading">Web Engineering</p>
+            <button class="changer">change theme</button>
         </nav>
         <main>
-            <h1>hello</h1>
         </main>
     </body>
 </html>
