--- a/index.html
+++ b/index.html
@@ -16,6 +16,29 @@
             <button class="changer">change theme</button>
         </nav>
         <main>
+            <div class="info">
+                <picture>
+                    <source srcset="media/info.webp" type="image/webp">
+                    <img src="media/info.jpg" alt="Alan Bernstein info image">
+                </picture>
+                <div class="desc">
+                    <p class="name">Alan Bernstein</p>
+                    <p class="sub">Computer Scientist, BSc</p>
+                    <p style="margin-right: 20px">
+                        <a href="https://github.com/bernstein7z" target="_blank" rel="noopener noreferrer">
+                            <picture>
+                                <source srcset="media/GitHub-light.png" type="image/png" media="[data-theme=dark]">
+                                <img id="gh-logo" src="media/GitHub-dark.png" alt="Github Mark">
+                            </picture>
+                        </a>
+                    </p>
+                    <p>
+                        <a id="website" href="https://bernstein.dev" target="_blank" rel="noopener noreferrer">
+                            bernstein.dev
+                        </a>
+                    </p>
+                </div>
+            </div>
         </main>
     </body>
 </html>
