--- a/index.html
+++ b/index.html
@@ -78,6 +78,13 @@
                         <a class="links" href="solutions/we03/grid-2.html">responsive grid</a>
                     </div>
                 </article>
+                <article class="card">
+                    <p class="name">JavaScript</p>
+                    <p class="sub">A scripting language controlling the web</p>
+                    <div class="links-container">
+                        <a class="links" href="solutions/we04/index.html">JavaScript</a>
+                    </div>
+                </article>
             </section>
         </main>
     </body>
