--- a/solutions/we04/index.html
+++ b/solutions/we04/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title>JavaScript</title>
-        <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.0.1/styles/default.min.css">
-        <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.0.1/highlight.min.js"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.0.1/styles/default.min.css">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.0.1/highlight.min.js"></script>
         <script>hljs.highlightAll();</script>
         <script>
             (function () {
@@ -24,12 +24,50 @@
                 localStorage.setItem('data-theme', theme);
             })();
         </script>
+        <style>
+            .hljs {
+                color: #24292e;
+                background: #fff;
+                /*color: #adbac7;
+                background: #22272e;*/
+            }
+
+            pre {
+                display: flex;
+            }
+
+            pre code.hljs {
+                padding: 1rem 2rem;
+            }
+        </style>
     </head>
     <body>
+        <h3>function applyf(func):</h3>
         <pre>
-            <code class="language-javascript">
-function main() {
-    console.log('demo');
+            <code>
+function applyf(func) {
+    return function (x) {
+        return function (y) {
+            return func(x, y);
+        };
+    };
+}
+            </code>
+        </pre>
+        <p>Fibonacci:</p>
+        <pre>
+            <code>
+function fib(last) {
+    var a = 0, b = 1, i = 0;
+
+    while (i < last) {
+        var temp = a;
+        a = b;
+        b += temp;
+        i++;
+    }
+
+    return b;
 }
             </code>
         </pre>
