add solutions for week 8

--- a/index.html
+++ b/index.html
@@ -105,6 +105,14 @@
                         <a class="links" href="solutions/we07/render.html">Zeitmessung</a>
                     </div>
                 </article>
+                <article class="card">
+                    <p class="name">Async</p>
+                    <p class="sub">Promise me to await.</p>
+                    <div class="links-container">
+                        <a class="links" href="solutions/we08/promise.html">Promise</a>
+                        <a class="links" href="solutions/we08/await.html">async/await</a>
+                    </div>
+                </article>
             </section>
         </main>
     </body>
